# cr2

./: Makefile  README.md  challenge.md  pyproject.toml
docker/: Dockerfile  docker-compose.yml
tests/: test_api.py
tsc/: main.py  models.py
tsc/clients/: google_translation.py  mongo.py
tsc/routes/: words.py
tsc/utils/: config.py
