[tool.poetry]
name = "translation"
version = "0.1.0"
description = "Transation Service Challenge"
authors = ["User"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.105.0"
pymongo = "^4.6.1"
uvicorn = "^0.25.0"
pydantic-settings = "^2.1.0"
googletrans = "^3.0.0"
httpx = "0.13.3"
starlette-exporter = "^0.17.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
